# aois_repo

./: README.md
laba1/: .gitignore  main.js  package.json  run.js  test.js
laba2/: Dockerfile  docker-compose.yml
laba2/src/: CMakeLists.txt  Evaluator.cpp  TruthTableGenerator.cpp  TruthTableGenerator.h  main.cpp
laba2/tests/: CMakeLists.txt
laba3/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
laba3/src/: CMakeLists.txt  Evaluator.h  Lexer.cpp  Lexer.h  NormalFormBuilder.cpp  NormalFormBuilder.h  QuineMcCluskey.cpp  QuineMcCluskey.h  ShuntingYard.cpp  ShuntingYard.h  Utils.cpp  Utils.h  main.cpp
laba3/tests/: CMakeLists.txt  main_test.cpp
laba4/: preob.circ  preob.py  summator.circ  summator.py
laba6/: CMakeLists.txt  report.html  start.sh
laba6/include/: AVLTree.h  HashTable.h  common.h
laba6/src/: AVLTree.cpp  HashTable.cpp  main.cpp
laba6/tests/: CMakeLists.txt
laba7/: app.py  main.py  test.py
